--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.30.0",
     "tailwindcss": "^4.1.4",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zeromq": "^6.4.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
