--- a/server/publishers/Dockerfile
+++ b/server/publishers/Dockerfile
@@ -2,9 +2,8 @@ FROM python:3.10
 
 WORKDIR /app/publishers
 
-COPY ../requirements.txt /app/
 COPY . /app/publishers/
 
-RUN pip install --no-cache-dir -r /app/requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 CMD ["python", "publisher_process.py"]
