--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ./client:/app
     working_dir: /app
-    command: ["npm", "run", "dev"]
+    #command: ["npm", "run", "dev"]
 
   chat-gateway:
     build: ./chat-gateaway
